--- a/Project/index.html
+++ b/Project/index.html
@@ -167,7 +167,8 @@
   </header>
 
   <main>
-    <h1 class="text-body-emphasis">Electronic Data Interchange Project</h1>
+    <h1 class="text-body-emphasis">Electronic Data Interchange - EDI</h1>
+    <p class="fs-5 col-md-8">text</p>
 
 	<!--
     <div class="mb-5">
@@ -195,11 +196,11 @@
 		xmlhttp.send();
 
 		function myFunction(arr) {
-		  var out = "<thead class=\"thead-dark\"><tr><th>First Name</th><th>Last Name</th><th>Email</th></tr></thead>";
+		  var out = "<thead class=\"thead-dark\"><tr><th>First Name</th><th>Last Name</th><th>City</th></tr></thead>";
 		  var i;
 		  out += '<tbody>';
 		  for(i = 0; i < arr.length; i++) {
-			out += '<tr><td>' + arr[i].first_name + '</td><td>' + arr[i].last_name + '</td><td>' + arr[i].email + '</td></tr>';
+			out += '<tr><td>' + arr[i].first_name + '</td><td>' + arr[i].last_name + '</td><td>' + arr[i].city + '</td></tr>';
 		  }
 		  out += '</tbody>';
 		  document.getElementById("list").innerHTML = out;
@@ -219,6 +220,77 @@
 		<!--
         <p>Read more detailed instructions and documentation on using or contributing to Bootstrap.</p>
 		-->
+    <hr/>
+
+	<div>
+	  <canvas id="myChart"></canvas>
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+	<script>
+	  const ctx = document.getElementById('myChart');
+
+	  new Chart(ctx, {
+		type: 'bar',
+		data: {
+		  labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+		  datasets: [{
+			label: '# of Votes',
+			data: [12, 19, 3, 5, 2, 3],
+			borderWidth: 1
+		  }]
+		},
+		options: {
+		  scales: {
+			y: {
+			  beginAtZero: true
+			}
+		  },
+		  plugins: {
+            title: {
+                display: true,
+                text: 'First chart of type \"bar\"'
+            }
+        },		  
+		}
+	  });
+	</script>
+
+
+	<div>
+	  <canvas id="myChart2"></canvas>
+	</div>
+
+	<script>
+	  const ctx2 = document.getElementById('myChart2');
+
+	  new Chart(ctx2, {
+		type: 'doughnut',
+		data: {
+		  labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+		  datasets: [{
+			label: '# of Votes',
+			data: [12, 19, 3, 5, 2, 3],
+			borderWidth: 1
+		  }]
+		},
+		options: {
+		  scales: {
+			y: {
+			  beginAtZero: true
+			}
+		  },
+		  plugins: {
+            title: {
+                display: true,
+                text: 'Second chart of type \"doughnut\"'
+            }
+        },		  
+		}
+	  });
+	</script>
+
       </div>
     </div>
   </main>
