--- a/Project/index.html
+++ b/Project/index.html
@@ -168,7 +168,7 @@
 
   <main>
     <h1 class="text-body-emphasis">Electronic Data Interchange - EDI</h1>
-    <p class="fs-5 col-md-8">text</p>
+    <p class="fs-5 col-md-8">Salah Eddine Zedadra, Tomasz Gerono, Boladale Oluwasegun</p>
 
 	<!--
     <div class="mb-5">
