--- a/Project/index.html
+++ b/Project/index.html
@@ -184,7 +184,7 @@
 		<!-- below sample taken from the page: https://www.w3schools.com/js/js_json_http.asp and adjusted to our needs -->
 		<script>
 		var xmlhttp = new XMLHttpRequest();
-		var url = "https://my.api.mockaroo.com/users1.json?key=7d9a5180";
+		var url = "https://my.api.mockaroo.com/users.json?key=1a3c69b0";
 
 		xmlhttp.onreadystatechange = function() {
 		  if (this.readyState == 4 && this.status == 200) {
