--- a/Project/index.html
+++ b/Project/index.html
@@ -196,7 +196,7 @@
 		xmlhttp.send();
 
 		function myFunction(arr) {
-		  var out = "<thead class=\"thead-dark\"><tr><th>First Name</th><th>Last Name</th><th>Gender</th></tr></thead>";
+		  var out = "<thead class=\"thead-dark\"><tr><th>Username</th><th>Movie</th><th>Genre</th></tr></thead>";
 		  var i;
 		  out += '<tbody>';
 		  for(i = 0; i < arr.length; i++) {
