--- a/Project/index.html
+++ b/Project/index.html
@@ -200,7 +200,7 @@
 		  var i;
 		  out += '<tbody>';
 		  for(i = 0; i < arr.length; i++) {
-			out += '<tr><td>' + arr[i].User + '</td><td>' + arr[i].movie + '</td><td>' + arr[i].Genre + '</td><td>' + arr[i].Country + '</td><td>' + arr[i].Rating + '</td></tr>';
+			out += '<tr><td>' + arr[i].User + '</td><td>' + arr[i].Movie + '</td><td>' + arr[i].Genre + '</td><td>' + arr[i].Country + '</td><td>' + arr[i].Rating + '</td></tr>';
 		  }
 		  out += '</tbody>';
 		  document.getElementById("list").innerHTML = out;
