--- a/Project/index.html
+++ b/Project/index.html
@@ -3,6 +3,7 @@
   <head><script src="assets/js/color-modes.js"></script>
 
     <meta charset="utf-8">
+    <title>EDI Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
@@ -158,12 +159,6 @@
 </svg>
 
 <div class="col-lg-8 mx-auto p-4 py-md-5">
-  <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
-    <a href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-      <span class="fs-4">The page is based on Starter template and examples available on Bootstrap page</span>
-    </a>
-  </header>
 
   <main>
     <h1 class="text-body-emphasis">Electronic Data Interchange - EDI</h1>
@@ -178,7 +173,7 @@
     <hr class="col-3 col-md-1 mb-5">
 
     <div class="row g-5">
-      <div class="col-md-6">
+      <div class="col-md-7">
         <h2 class="text-body-emphasis">Displaying data available via Mockaroo API</h2>
 		<!-- below sample taken from the page: https://www.w3schools.com/js/js_json_http.asp and adjusted to our needs -->
 		<script>
@@ -227,39 +222,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DATA VIZ</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        font-family: sans-serif;
-      }
-      .chartMenu {
-        width: 100vw;
-        height: 40px;
-        background: #1A1A1A;
-        color: rgba(54, 162, 235, 1);
-      }
-      .chartMenu p {
-        padding: 10px;
-        font-size: 20px;
-      }
-      .chartCard {
-        width: 100vw;
-        height: calc(100vh - 40px);
-        background: rgba(54, 162, 235, 0.2);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .chartBox {
-        width: 700px;
-        padding: 20px;
-        border-radius: 20px;
-        border: solid 3px rgba(54, 162, 235, 1);
-        background: white;
-      }
-    </style>
   </head>
   <body>
     
@@ -291,7 +253,7 @@
         datasets: [{
             label: 'Countries with Movies Rated Higher than 3.0',
             data: [4.93, 4.78, 4.69, 4.69, 4.69, 4.68, 4.41, 
-            4.14, 4.04, 4.02, 4.02, 3.92, 3.91, 3.90, 3.88, 3.86, 3.80,3.78,3.775,3.77,3.72,3.68,3.675,3.64,3.591904762,3.55,3.542,3.535,3.51,3.5,3.49,3.47,3.46,3.44,3.42,3.41,3.36,3.35,3.345555556,3.338571429,3.334,3.333333333,3.3225,3.318333333,3.263333333,3.263333333,3.246,3.245,3.24,3.2075,3.19,3.168181818,3.14,3.07125,3.07,3.063333333,3.047770701,3.043235294,3.03,3.029615385,3.026363636,3.025,3.005 		
+            4.14, 4.04, 4.02, 4.02, 3.92, 3.91, 3.90, 3.88, 3.86, 3.80,3.78,3.775,3.77,3.72,3.68,3.675,3.64,3.59,3.55,3.542,3.535,3.51,3.5,3.49,3.47,3.46,3.44,3.42,3.41,3.36,3.35,3.345555556,3.338571429,3.334,3.333333333,3.3225,3.318333333,3.263333333,3.263333333,3.246,3.245,3.24,3.2075,3.19,3.168181818,3.14,3.07125,3.07,3.063333333,3.047770701,3.043235294,3.03,3.029615385,3.026363636,3.025,3.005 		
 	
    ],
             backgroundColor: [
@@ -312,7 +274,7 @@
             'rgba(255, 159, 64, 1)',
             'rgba(0, 0, 0, 1)'
             ],
-            borderWidth: 1
+            borderWidth: 3
         }]
         };
 
@@ -352,36 +314,67 @@
 	  const ctx2 = document.getElementById('myChart2');
 
 	  new Chart(ctx2, {
-		type: 'doughnut',
+		type: 'pie',
 		data: {
-		  labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+		  labels: ['Falling Down', 'Guardian', 'Two Bits', 'Baader Meinhof Komplex', 'Beauty in Trouble', 'Early Years: Erik Nietzsche Part 1'],
 		  datasets: [{
+      backgroundColor: [
+            'rgba(255, 255, 255, 0.8)',
+            'rgba(0, 0, 0, 0.8)',
+            'rgba(142, 0, 0, 0.8)',
+            'rgba(142, 225, 137, 0.8)',
+            'rgba(228, 225, 137, 0.8)',
+            'rgba(78, 114, 226, 0.96)',
+            ],
 			label: '# of Votes',
-			data: [12, 19, 3, 5, 2, 3],
-			borderWidth: 1
+			data: [5, 4.95, 4.9, 4.89, 4.85, 4.83],
+			borderWidth: 3
 		  }]
 		},
 		options: {
-		  scales: {
-			y: {
-			  beginAtZero: true
-			}
-		  },
 		  plugins: {
             title: {
                 display: true,
-                text: 'Second chart of type \"doughnut\"'
+                text: 'Highest Rated Movies'
             }
         },		  
 		}
 	  });
 	</script>
 
+<div>
+  <canvas id="myChart3"></canvas>
+</div>
+
+<script>
+  const ctx3 = document.getElementById('myChart3');
+
+  new Chart(ctx3, {
+  type: 'doughnut',
+  data: {
+    labels: ['Estonia', 'East Timor', 'Malta', 'Armenia', 'United Kingdom', 'Guam'],
+    datasets: [{
+    label: '# of Votes',
+    data: [4.93, 4.78, 4.69, 4.69, 4.69, 4.68],
+    borderWidth: 3
+    }]
+  },
+  options: {
+    plugins: {
+          title: {
+              display: true,
+              text: 'Countries Rate Average'
+          }
+      },		  
+  }
+  });
+</script>
+
       </div>
     </div>
   </main>
   <footer class="pt-5 my-5 text-body-secondary border-top">
-    Created by the Bootstrap team &middot; &copy; 2023
+    Electronic Data Interchange - EDI
   </footer>
 </div>
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
